2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2014-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ligkern.c, parse.c, subfont.c, ttf2pk.c, vplaux.c: Avoid
	undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-08-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tfmaux.c: Use mycalloc() to initialize header array (with 0).

2013-07-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2tfm.c: Build title with progname instead of argv[0] as
	suggested by Werner Lemberg <wl@gnu.org>.

	* tests/ttf2pk.test: Also check some .pl and .vpl files.
	* tests/GenR-ec.vpl, GenR102-ec.pl, ipaexg-[hv]03.pl:
	Expected test output files.
	* Makefile.am (EXTRA_DIST): Add the additional files.

2013-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac, filesrch.c: Renamed c-auto.h => config.h.

	* Include <config.h> first in all C files and never in headers.

2013-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid compiler warnings (found by Mojca).
	* newobj.c: Boolean is False/True (No/Yes/Only is PSstate).
	* ttflib.c: An unsigned int is never < 0.

2013-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ftlib.c: Apply 'vert'/'vrt2' substitutions for rotated fonts.
	* newobj.[ch]: Replace my{m,c,re}alloc() => x{m,c,re}alloc().

	* ac/withenable.ac: Enabled by default.

2013-06-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* newobj.c: Define mycalloc(), already declared in newobj.c.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am ({cfg,enc}datadir): Change texmf => texmf-dist.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ftlib.c: Drop unused functions get_Short() and get_Long().
	* subfont.c: Drop unused variable (gcc-4.6 warning).

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.
